[tool.poetry]
name = "malbench"
version = "1.0.0"
description = "A tool used for automating the analysis of malware samples against antivirus solutions."
authors = ["Gavin Youker <youkergav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
