[tool.poetry]
name = "malbench"
version = "1.0.0"
description = "A tool used for automating the analysis of malware samples against antivirus solutions."
authors = ["Gavin Youker <youkergav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
toml = "^0.10.2"
holidays = "^0.22"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
autopep8 = "^2.0.2"
pdoc = "^13.1.0"
coverage = "^7.2.3"
mypy = "^1.2.0"
types-toml = "^0.10.8.6"
types-colorama = "^0.4.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
